--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video Player</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <style>
       body {
         margin: 0; /* Remove default margin */
@@ -16,7 +19,7 @@
         width: 100%;
       }
       .video-container {
-        position: relative;        
+        position: relative;
         width: 100%; /* Adjust container width as needed */
         height: 100%; /* Adjust container height as needed */
       }
@@ -78,7 +81,8 @@
 
       // Function to toggle play/pause when spacebar is pressed
       function togglePlayPause(event) {
-        if (event.keyCode === 32) { // 32 is the keycode for spacebar
+        if (event.keyCode === 32) {
+          // 32 is the keycode for spacebar
           event.preventDefault(); // Prevent spacebar from scrolling the page
           if (currentVideo.paused) {
             currentVideo.play();
@@ -102,9 +106,9 @@
         transitionVideos(thirdVideo);
       });
 
-      thirdVideo.addEventListener("ended", function () {
+      thirdVideo.addEventListener("pause", function () {
         // Reload the page when the third video ends
-        location.reload();
+        transitionVideos(firstVideo);
       });
 
       // Pause the first video initially
